tests/baselines/reference/invalidStaticField.errors.txt
invalidStaticField.ts(1,28): error TS2339: Property 'NULL' does not exist on type 'typeof B'.


==== invalidStaticField.ts (1 errors) ====
    class A { foo() { return B.NULL; } }
                               ~~~~
!!! error TS2339: Property 'NULL' does not exist on type 'typeof B'.
    class B { static NOT_NULL = new B(); }